@@ -50,6 +50,7 @@ included in the vX.Y.Z section and be denoted as:
 1.6.4
 -----
 
+- Fix a linker error when using the --without-hwloc.
 - Automatically provide compiler flags that compile properly on some
   types of ARM systems.
 - Fix slot_list behavior when multiple sockets are specified.  Thanks
